@@ -1445,6 +1445,10 @@ Fri May 23 11:46:15 CEST 2003
 Tue May 27 13:29:28 CEST 2003
 
 	- Fixed incorrect output for some structs.
+	
+Tue May 27 16:33:36 CEST 2003
+
+	- Accept stdin/stdout as input/output file.
 	- Set ecpg version to 2.12.0.
 	- Set ecpg library to 3.4.2.
 	- Set pgtypes library to 1.0.0
